--- a/ftp.css
+++ b/ftp.css
@@ -86,3 +86,9 @@ dir {
 li:hover {
   cursor: grab;
 }
+.mouseRightPopup {
+	position: absolute;
+	width: 300px;
+	height: 300px;
+	background-color: brown;
+}
