--- a/ftp.css
+++ b/ftp.css
@@ -45,6 +45,9 @@ html,
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
+  /* user-select:none; */
 }
 ol,
 ul {
@@ -80,9 +83,25 @@ dir {
 li:hover {
   cursor: grab;
 }
-.mouseRightPopup {
+#mouseRightPopup {
   position: absolute;
-  width: 300px;
-  height: 300px;
-  background-color: brown;
+  width: 150px;
+  /* height: 300px; */
+  background-color: #fff;
+  /* border: 1px solid #f5f5f5; */
+  font-size: 18px;
+  /* box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 0 0 1px #ffffff, 0 0 0 2px #ddd, 0 0 5px 3px #eeeeee;
+  border-radius: 1px;
+}
+#mouseRightPopup div {
+  padding: 0 20px;
+  border-top: 1px solid #f5f5f5;
+  cursor: default;
+}
+#mouseRightPopup div:hover {
+  background-color: #f5f5f5;
+}
+#mouseRightPopup div:first-child {
+  border-top: none;
 }
